# LidarSlam

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
ci/: Dockerfile  (+2 more)
external_sensors_msg/livox_ros_driver/: CMakeLists.txt
lidar_conversions/: CMakeLists.txt  README.md  package.xml
lidar_conversions/params/: conversion_config.yaml
lidar_conversions/src/: GenericConversionNode.cxx  GenericConversionNode.h  HesaiToLidarNode.cxx  HesaiToLidarNode.h  LivoxToLidarNode.cxx  LivoxToLidarNode.h  OusterToLidarNode.cxx  OusterToLidarNode.h  RawToLidarNode.cxx  RawToLidarNode.h  RobosenseToLidarNode.cxx  RobosenseToLidarNode.h  Utilities.h  VelodyneToLidarNode.cxx  VelodyneToLidarNode.h
lidar_slam/: CMakeLists.txt  README.md  package.xml
lidar_slam/launch/: slam_livox.launch.py  slam_livox.py  slam_ouster.py  slam_velodyne.launch  slam_velodyne.py
lidar_slam/msg/: SlamCommand.msg
lidar_slam/params/: aggregation_config.yaml  slam.rviz  slam_config_indoor.yaml  slam_config_outdoor.yaml
lidar_slam/src/: AggregationNode.cxx  AggregationNode.h  LidarSlamNode.cxx  LidarSlamNode.h  LidarSlamNode_main.cxx  ros_transform_utils.h
lidar_slam_interfaces/: CMakeLists.txt  package.xml
paraview_wrapping/Plugin/: CMakeLists.txt  paraview.plugin
paraview_wrapping/Plugin/UserInterface/: sqAboutSlamAction.cxx  sqAboutSlamAction.h  sqAboutSlamDialog.cxx  sqAboutSlamDialog.h  sqAddSlamReaction.cxx  sqAddSlamReaction.h  sqButtonPausePropertyWidget.cxx  sqButtonPausePropertyWidget.h  sqInitializeDialogReaction.cxx  sqInitializeDialogReaction.h  sqPresetDialog.cxx  sqPresetDialog.h  sqPresetDialogReaction.cxx  sqPresetDialogReaction.h  sqSlamManager.cxx  sqSlamManager.h  sqSlamStarter.cxx  sqSlamStarter.h  sqSlamToolbar.cxx  sqSlamToolbar.h  sqSubsetPropertiesDialog.cxx  sqSubsetPropertiesDialog.h  sqTriggerSlamCommandReaction.cxx  sqTriggerSlamCommandReaction.h
paraview_wrapping/Plugin/UserInterface/Resources/: sqResources.qrc
paraview_wrapping/Plugin/UserInterface/Resources/Presets/Environment/: City.xml  Forest.xml  Indoor.xml  Tunnel.xml
paraview_wrapping/Plugin/UserInterface/Resources/Presets/LidarModel/: C16.xml  C32.xml  HAP.xml  Mid360.xml  PandarXT32.xml  VLP16.xml  VLP32.xml  VLS128.xml
paraview_wrapping/Plugin/UserInterface/Resources/Presets/LidarSupport/: Pedestrian.xml  Vehicle.xml
paraview_wrapping/Plugin/UserInterface/Resources/UI/: sqAboutSlamDialog.ui  sqPresetDialog.ui  sqSlamToolbar.ui
paraview_wrapping/Plugin/doc/: How_to_SLAM_with_LidarView.md
paraview_wrapping/Plugin/vtkLidarSlam/: CMakeLists.txt  MiniSlam.xml  Slam.xml  vtkMiniSlam.cxx  vtkMiniSlam.h  vtkSlam.cxx  vtkSlam.h  vtkSpinningSensorKeypointExtractor.cxx  vtkSpinningSensorKeypointExtractor.h
paraview_wrapping/Plugin/vtkSlamUtilities/: CMakeLists.txt  vtk.module  vtkLoopClosureActors.cxx  vtkLoopClosureActors.h  vtkSlamFinder.cxx  vtkSlamFinder.h  vtkSlamInfo.h.in
ros2_wrapping/external_sensors_msg/apriltag_ros/: CMakeLists.txt  package.xml
ros2_wrapping/external_sensors_msg/livox_ros_driver/: CMakeLists.txt  package.xml
ros2_wrapping/lidar_conversions/: CMakeLists.txt  README.md  package.xml
ros2_wrapping/lidar_conversions/external_include/: GenericPoint.h  hesai_point.h  os_point.h
ros2_wrapping/lidar_conversions/params/: conversion_config.yaml
ros2_wrapping/lidar_conversions/src/: GenericConversionNode.cxx  GenericConversionNode.h  HesaiToLidarNode.cxx  HesaiToLidarNode.h  LivoxToLidarNode.cxx  LivoxToLidarNode.h  OusterToLidarNode.cxx  OusterToLidarNode.h  RawToLidarNode.cxx  RawToLidarNode.h  RobosenseToLidarNode.cxx  RobosenseToLidarNode.h  Utilities.h  VelodyneToLidarNode.cxx  VelodyneToLidarNode.h
ros2_wrapping/lidar_slam/: CMakeLists.txt  README.md  package.xml
ros2_wrapping/lidar_slam/launch/: gps_conversions.launch  slam_hesai.launch.py  slam_hesai.py  slam_livox.launch.py  slam_livox.py  slam_ouster.launch  slam_ouster.launch.py  slam_ouster.py  slam_velodyne.launch  slam_velodyne.py
ros2_wrapping/lidar_slam/msg/: Confidence.msg  SlamCommand.msg
ros2_wrapping/lidar_slam/params/: aggregation_config.yaml  metadata_OS1_64_1024x10.json  ouster_driver_parameters.yaml  ouster_tins_driver_config.yaml  slam.rviz  slam_config_indoor.yaml  slam_config_outdoor.yaml
ros2_wrapping/lidar_slam/src/: AggregationNode.cxx  AggregationNode.h  LidarSlamNode.cxx  LidarSlamNode.h  LidarSlamNode_main.cxx  ros_transform_utils.h
ros2_wrapping/lidar_slam/srv/: SavePc.srv  SetInitialState.srv
ros2_wrapping/lidar_slam_interfaces/: CMakeLists.txt  package.xml
ros2_wrapping/slam_visualization/: CMakeLists.txt  package.xml
ros2_wrapping/slam_visualization/src/: SlamControlPanel.cxx  SlamControlPanel.h
ros_wrapping/lidar_slam/: CMakeLists.txt  README.md  package.xml
ros_wrapping/lidar_slam/launch/: slam_hesai.launch  slam_livox.launch  slam_ouster.launch  slam_velodyne.launch
ros_wrapping/lidar_slam/msg/: SlamCommand.msg
ros_wrapping/lidar_slam/params/: aggregation_config.yaml  slam.rviz  slam_config_indoor.yaml  slam_config_outdoor.yaml
ros_wrapping/lidar_slam/src/: AggregationNode.cxx  AggregationNode.h  LidarSlamNode.cxx  LidarSlamNode.h
slam_lib/: CMakeLists.txt
slam_lib/include/LidarSlam/: CeresCostFunctions.h  DenseSpinningSensorKeypointExtractor.h  Enums.h  ExternalSensorManagers.h  KeypointExtractor.h  KeypointsMatcher.h  LidarPoint.h  PointCloudStorage.h  RollingGrid.h  Slam.h  SpinningSensorKeypointExtractor.h  State.h  Utilities.h
slam_lib/src/: ConfidenceEstimators.cxx  DenseSpinningSensorKeypointExtractor.cxx  ExternalSensorManagers.cxx  KeypointExtractor.cxx  KeypointsMatcher.cxx  PoseGraphOptimizer.cxx  RollingGrid.cxx  Slam.cxx  SpinningSensorKeypointExtractor.cxx  Utilities.cxx  VoxelGrid.cxx
slam_visualization/: CMakeLists.txt  plugins_description.xml
slam_visualization/src/: SlamControlPanel.cxx  SlamControlPanel.h
tests/: CMakeLists.txt  README.md  package.xml
tests/launch/: slam.launch  slam.py
tests/params/: eval.yaml  qos_settings.yaml
tests/src/: LidarSlamTestNode.cxx  LidarSlamTestNode.h
vtk_wrapping/vtkLidarSlam/: CMakeLists.txt
(+61 files in other folders)
