<?xml version="1.0"?>
<package format="3">
  <name>lidar_slam_test</name>
  <version>1.5.0</version>
  <description>ROS tests on LiDAR SLAM library.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="julia.sanchez@kitware.com">Julia Sanchez</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rclcpp</depend>
  <depend>lidar_slam_interfaces</depend> <!-- for message type + execution -->
  <depend>nav_msgs</depend>
  <depend>tf2_eigen</depend>

  <exec_depend>message_runtime</exec_depend>
    <!-- to exec package with a launchfile -->
  <exec_depend>ros2launch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
